--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.8.4",
+    "markdown-escape": "^2.0.0",
     "nestjs-telegraf": "^2.8.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "telegram-format": "^3.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
